[gd_scene load_steps=67 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-smrslt-00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-idle-00.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-smrslt-01.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-smrslt-03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-slide-00.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-slide-01.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-smrslt-02.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-items-00.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-air-attack-3-end-01.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-cast-01.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-cast-03.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-cast-02.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-cast-00.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-hurt-01.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-run-01.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-air-attack3-loop-00.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-run-00.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-run-02.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-run-03.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-run-05.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-run-04.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-fall-00.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-06.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-air-attack3-loop-01.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-jump-03.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-hurt-02.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-hurt-00.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-idle-01.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-idle-02.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-idle-03.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-jump-00.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-05.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-crouch-03.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-air-attack-3-end-00.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-02.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-air-attack3-rdy-00.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-fall-01.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-01.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-04.png" type="Texture" id=46]
[ext_resource path="res://Audio/SoundEffects/Player/jump.wav" type="AudioStream" id=48]
[ext_resource path="res://Audio/SoundEffects/Player/bigjump.wav" type="AudioStream" id=49]
[ext_resource path="res://Audio/SoundEffects/Player/flip.wav" type="AudioStream" id=50]
[ext_resource path="res://Audio/SoundEffects/Player/thud.ogg" type="AudioStream" id=51]
[ext_resource path="res://Audio/SoundEffects/Bonus/brick.wav" type="AudioStream" id=52]
[ext_resource path="res://Audio/SoundEffects/Player/skid.wav" type="AudioStream" id=53]
[ext_resource path="res://Audio/SoundEffects/Player/shoot.wav" type="AudioStream" id=54]
[ext_resource path="res://Audio/SoundEffects/Player/hurt.wav" type="AudioStream" id=55]
[ext_resource path="res://Audio/SoundEffects/Player/kill.wav" type="AudioStream" id=56]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-03.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-jump-02.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-jump-01.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Creatures/Tux/Big/adventurer-die-00.png" type="Texture" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "Attack",
"speed": 2.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 44 ) ],
"loop": false,
"name": "fall",
"speed": 16.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 23 ), ExtResource( 44 ) ],
"loop": false,
"name": "fall_transition_small",
"speed": 16.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle_small",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "skid_small",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 26 ) ],
"loop": false,
"name": "jump",
"speed": 18.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "skid",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "buttjumpland",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk_small",
"speed": 20.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 44 ) ],
"loop": false,
"name": "fall_small",
"speed": 16.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "slide_small",
"speed": 5.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 23 ), ExtResource( 44 ) ],
"loop": false,
"name": "fall_transition",
"speed": 16.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 34 ) ],
"loop": true,
"name": "gameover_small",
"speed": 10.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 45 ), ExtResource( 42 ), ExtResource( 57 ), ExtResource( 46 ), ExtResource( 34 ), ExtResource( 24 ) ],
"loop": true,
"name": "gameover",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 26 ) ],
"loop": false,
"name": "jump_small",
"speed": 18.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "backflip",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 25 ), ExtResource( 43 ), ExtResource( 41 ) ],
"loop": false,
"name": "buttjump",
"speed": 35.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 15 ), ExtResource( 27 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Attack"

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1.2 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.8, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 0.85 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 15, 31 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 0, 0 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
rect_pivot_offset = Vector2( 0, 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]
visible = false
position = Vector2( -0.23383, 5.95148 )
scale = Vector2( 1.96345, 1.95645 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true
offset = Vector2( 0, -5 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Buttjump = SubResource( 3 )
anims/ButtjumpLand = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Land = SubResource( 6 )
anims/LandSmall = SubResource( 7 )
anims/Stop = SubResource( 8 )

[node name="AnimationPlayerInvincibility" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/HurtInvincibility = SubResource( 9 )
anims/InvincibleStar = SubResource( 10 )
anims/Stop = SubResource( 11 )

[node name="Hitbox" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( 0.155899, 1 )
shape = SubResource( 12 )

[node name="ShootLocation" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="ButtjumpHitbox" type="Area2D" parent="."]
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtjumpHitbox"]
shape = SubResource( 13 )
disabled = true

[node name="StandWindow" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 16

[node name="SFX" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 48 )

[node name="BigJump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 49 )

[node name="Flip" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 50 )

[node name="Thud" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 51 )

[node name="Brick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 52 )

[node name="Skid" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 53 )

[node name="Shoot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 54 )

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 55 )

[node name="Kill" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 56 )

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="ButtjumpTimer" type="Timer" parent="."]
one_shot = true

[node name="ButtjumpLandTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
